--- a/account02.html
+++ b/account02.html
@@ -72,7 +72,7 @@
 
               <p class='type_13'>Password:</p>
               <div class='input_box borderGray'>
-                <input class='inEnter addEnter pad815' value="******" onfocus="this.value=''" onblur="this.value='******'" >
+                <input class='inEnter addEnter pad815' value="Old Password" onfocus="this.value=''" onblur="this.value='Old Password'" >
                 <button class='btn_status_box w_50 c_gray icon-eye-slash'></button>
               </div>
                
