--- a/on_NetWorkPage04.html
+++ b/on_NetWorkPage04.html
@@ -63,7 +63,7 @@
                 <div class='team_pic_box'><img src="img/team.png"></div>
                 <div class='team_type_box'>
                   <div class='all_box'>
-                    <div class='team_title'>Intern Team</div>
+                    <div class='team_title'>Raddest Roommates UpdateRaddest Roommates Update</div>
                     <a href="on_NetWorkPage04_3.html" class='link_icon icon-qrcode---FontAwesome'></a>
                   </div>
                   <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
