--- a/CreatQRLink01.html
+++ b/CreatQRLink01.html
@@ -106,10 +106,10 @@
                   <input class='inEnter addEnter' type="text" value="YouTube" onfocus="this.value=''" onblur="this.value='YouTube'" >
                 </div>
 
-                <!-- 09.Tiktok -->
+                <!-- 09.TikTok -->
                 <div class='input_box borderGray'>
-                  <div class='social_box icon-tiktok'></div>
-                  <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'" >
+                  <div class='social_box icon-TikTok'></div>
+                  <input class='inEnter addEnter' type="text" value="TikTok" onfocus="this.value=''" onblur="this.value='TikTok'" >
                 </div>
 
                 <!-- 10.Discord -->
