--- a/CreatQRLink02.html
+++ b/CreatQRLink02.html
@@ -150,7 +150,7 @@
           <div class='check_social'><input class='icon-linkedin' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-twitter' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-youtube' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-tiktok' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-TikTok' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-discord' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-slack' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-skype' type="checkbox" name=""></div>
