--- a/NetWorkPage02.html
+++ b/NetWorkPage02.html
@@ -17,6 +17,16 @@
 
     <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/public.js"></script>
+
+    <style type="text/css">
+      .text-danger {
+        color: #dc3545 !important;
+      }
+
+      .pt-3, .py-3 {
+        padding-top: 1rem !important;
+      }
+    </style>
   </head>
 
   <body class='bg_color_p'>
@@ -63,6 +73,11 @@
                   </div>
                   <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
                 </div>
+              </div>
+
+              <p id="already_joined_msg" class="bright_type13 m_padB15 text-danger pt-3 break-word add_text">You're already a member!</p>
+              <div class='all_box ac_cent padTOP30'>
+                <a href="" class='link_brightBlue m_order_no'>VIEW NETWORK</a>
               </div>
             </div>
 
@@ -122,10 +137,10 @@
                   <input class='inEnter addEnter' type="text" value="YouTube" onfocus="this.value=''" onblur="this.value='YouTube'" >
                 </div>
 
-                <!-- 09.Tiktok -->
+                <!-- 09.TikTok -->
                 <div class='input_box borderGray'>
-                  <div class='social_box icon-tiktok'></div>
-                  <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'" >
+                  <div class='social_box icon-TikTok'></div>
+                  <input class='inEnter addEnter' type="text" value="TikTok" onfocus="this.value=''" onblur="this.value='TikTok'" >
                 </div>
 
                 <!-- 10.Discord -->
