--- a/NetWorkPage03.html
+++ b/NetWorkPage03.html
@@ -131,10 +131,10 @@
                   <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
 
-                <!-- 09.Tiktok -->
+                <!-- 09.TikTok -->
                 <div class='input_box borderGray'>
-                  <div class='social_box icon-tiktok'></div>
-                  <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'" >
+                  <div class='social_box icon-TikTok'></div>
+                  <input class='inEnter addEnter' type="text" value="TikTok" onfocus="this.value=''" onblur="this.value='TikTok'" >
                   <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
                 </div>
 
@@ -289,8 +289,8 @@
             <p class='team_type padTD10'>Twitter</p>
           </div>
           <div class='check_social'>
-            <input class='icon-tiktok' type="checkbox" name="">
-            <p class='team_type padTD10'>Tiktok</p>
+            <input class='icon-TikTok' type="checkbox" name="">
+            <p class='team_type padTD10'>TikTok</p>
           </div>
           <div class='check_social'>
             <input class='icon-venmo' type="checkbox" name="">
