--- a/account.html
+++ b/account.html
@@ -64,9 +64,7 @@
               </div>
 
               <p class='type_13'>ID:</p>
-              <div class='input_box borderBlue'>
-                <input class='toEnter on_net01' disabled="teresa@zeusdesign.com.tw" type="text" value="teresa@zeusdesign.com.tw">
-              </div>
+              <p class='type_account magL23'>teresa@zeusdesign.com.tw</p>
 
               <p class='type_13'>Password:</p>
               <div class='input_box borderBlue'>
@@ -92,31 +90,31 @@
                 <!-- 01.email-->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-email'></div>
-                  <input class='inEnter in_all' type="text" value="abcdef568328@gmail.com">
+                  <input class='inEnter addEnter' type="text" value="abcdef568328@gmail.com">
                 </div>
 
                 <!-- 02.Instagram -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter in_all' type="text" value="LucyRedde">
+                  <input class='inEnter addEnter' type="text" value="LucyRedde">
                 </div>
 
                 <!-- 03.Snapchat -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter in_all' type="text" value="lucyredde23">
+                  <input class='inEnter addEnter' type="text" value="lucyredde23">
                 </div>
 
                 <!-- 04.Facebook -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-facebook'></div>
-                  <input class='inEnter in_all' type="text" value="lr123">
+                  <input class='inEnter addEnter' type="text" value="lr123">
                 </div>
 
                 <!-- 05.Phone -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-phone'></div>
-                  <input class='inEnter in_all' type="text" value="0912345678">
+                  <input class='inEnter addEnter' type="text" value="0912345678">
                 </div>
 
                 <!-- <div class='all_box w_cent magTop30 bottom_box2'>
