--- a/account02.html
+++ b/account02.html
@@ -61,14 +61,11 @@
               <!-- 第63-65行 11/23 新增 -->
               <div class='all_box magD30'>
                 <p class='type_data_title' style="line-height: 35px;">My Account Info</p>
-                <a href='account.html' class='btn_done'>DONE</a>
-                <a href='account.html' class='btn_done btn_close_g' style='margin-right: 8px;'>CLOSE</a>
+                <a href='account.html' class='btn_done btn_close_g'>CANCEL</a>
               </div>
 
               <p class='type_13'>ID:</p>
-              <div class='input_box'>
-                <input class='toEnter addEnter borderGray' value="teresa@zeusdesign.com.tw" onfocus="this.value=''" onblur="this.value='teresa@zeusdesign.com.tw'">
-              </div>
+              <p class='type_account magL23'>teresa@zeusdesign.com.tw</p>
 
               <p class='type_13'>Password:</p>
               <div class='input_box borderGray'>
@@ -84,6 +81,12 @@
               <div class='input_box borderGray'>
                 <input class='inEnter addEnter pad815' value="Confirm new password" onfocus="this.value=''" onblur="this.value='Confirm new password'" >
                 <button class='btn_status_box w_50 c_gray icon-eye-slash'></button>
+              </div>
+
+              <p class="link_little magL23 padTD15 login_use">Password must be between 8 and 20 characters and can be a combinations of characters, symbols, and/or numbers</p>
+              
+              <div class='all_box ac_cent'>
+                <a href='account.html' class='btn_done btn_d_c'>UPDATE</a>
               </div>
 
               <!-- <div class='all_box w_cent magTop30 bottom_box'> -->
@@ -218,8 +221,8 @@
             <p class='team_type padTD10'>Twitter</p>
           </div>
           <div class='check_social'>
-            <input class='icon-tiktok' type="checkbox" name="">
-            <p class='team_type padTD10'>Tiktok</p>
+            <input class='icon-TikTok' type="checkbox" name="">
+            <p class='team_type padTD10'>TikTok</p>
           </div>
           <div class='check_social'>
             <input class='icon-venmo' type="checkbox" name="">
