--- a/NetWorkList_ot01.html
+++ b/NetWorkList_ot01.html
@@ -56,7 +56,7 @@
             </div>
           </div>
 
-          <div class='cent_boxs'>
+          <div class='cent_boxs cent_bottom_box'>
             <div class='cent_box cent_box35'>
               <div class='all_box'>
                 <div class='team_pic_box'><img src="img/team.png"></div>
@@ -73,6 +73,10 @@
                 <p class='type_data_title'>My Shared Info</p>
                 <!-- 10/09 新增樣式 line_admin -->
                 <a href='NetWorkList_my04.html' class='link_icon line_admin icon-remove_red_eyevisibility'></a>
+              </div>
+
+              <div class='all_box w_cent magTop30 bottom_box'>
+                <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">LEAVE NETWORK</button>
               </div>
             </div>
 
@@ -143,6 +147,10 @@
                   <input class='inEnter' type="text" value="member name07">
                   <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
                 </div>
+              </div>
+
+              <div class='all_box w_cent magTop30 bottom_box2'>
+                <button class='link_gray2 type_uppercase' style='width:100%;' onclick="openModal();currentSlide(1)">LEAVE NETWORK</button>
               </div>
 
               <!-- 10//09 拿掉 手機版・虛線 -->
