--- a/NetWorkPage03_8.html
+++ b/NetWorkPage03_8.html
@@ -116,10 +116,10 @@
                   <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
                 </div>
 
-                <!-- 09.Tiktok -->
+                <!-- 09.TikTok -->
                 <div class='input_box borderGray'>
-                  <div class='social_box icon-tiktok'></div>
-                  <input class='inEnter addEnter' type="text" value="Tiktok" onfocus="this.value=''" onblur="this.value='Tiktok'">
+                  <div class='social_box icon-TikTok'></div>
+                  <input class='inEnter addEnter' type="text" value="TikTok" onfocus="this.value=''" onblur="this.value='TikTok'">
                   <!-- <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button> -->
                 </div>
 
@@ -165,7 +165,7 @@
           <div class='check_social'><input class='icon-linkedin' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-twitter' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-youtube' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-tiktok' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-TikTok' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-discord' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-slack' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-skype' type="checkbox" name=""></div>
