--- a/on_CreatQRLink01_v2.html
+++ b/on_CreatQRLink01_v2.html
@@ -50,8 +50,9 @@
 
         <main>
           <div class='bread2'>
-            <div class="bread_box2"><a href="index.html" class="bread_link2">Home</a></div>
-            <div class="bread_box2"><a href="account.html" class="bread_link2">My Account</a></div>
+            <div class="bread_box2"><a href="index.html" class="bread_link2 icon-home"></a></div>
+            <div class="bread_box2"><a href="account.html" class="bread_link2">NETWORK</a></div>
+            <div class="bread_box2"><a href="account.html" class="bread_link2">Happy Test</a></div>
           </div>
 
           <div class='cent_boxs cent_web'>
@@ -165,7 +166,7 @@
           <div class='check_social'><input class='icon-linkedin' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-twitter' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-youtube' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-tiktok' type="checkbox" name=""></div>
+          <div class='check_social'><input class='icon-TikTok' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-discord' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-slack' type="checkbox" name=""></div>
           <div class='check_social'><input class='icon-skype' type="checkbox" name=""></div>
