--- a/on_CreatQRLink01_v2.html
+++ b/on_CreatQRLink01_v2.html
@@ -29,21 +29,35 @@
           <a href="index.html" class='m_link_home'><img src="img/W_logo@2x.svg"></a>
           <nav>
             <div class='nav_boxs'>
-              <a href="on_NetWorkPage01.html">JOIN an NETWORK</a>
-              <a href="on_CreatQRLink01.html">CREATE QR LINK</a> 
-              <span>
-                MORE
-                <div>
-                  <a href='NetWorkList01.html' class='type_uppercase'>My Networks</a>
-                  <a href='CreateNetwork01.html' class='type_uppercase'>Create Network</a>
-                  <a href='SavePage01.html' class='type_uppercase'>saved contacts</a>
-                  <a href='MyQRLink01.html' class='type_uppercase'>My QR Links</a>
-                  <a href='account.html' class='type_uppercase'>My Account</a>
-                </div>
-              </span> 
+              <ul>
+                <li class="dropdown">
+                  <a href="NetWorkList01.html" class="dropbtn">NETWORKS</a>
+                  <div class="dropdown-content">
+                    <a href="NetWorkList01.html">MY NETWORKS</a>
+                    <a href="on_CreatQRLink01.html">CREATE NETWORK</a>
+                    <a href="on_NetWorkPage01.html">JOIN NETWORK</a>
+                  </div>
+                </li>
+                <li class="dropdown">
+                  <a href="on_CreatQRLink01.html" class="dropbtn">SHARE MY INFO</a>
+                  <div class="dropdown-content">
+                    <a href="on_CreatQRLink01.html">CREAT QR LINK</a>
+                    <a href="MyQRLink01.html">MY QR LINKS</a>
+                  </div>
+                </li>
+                <li class="dropdown">
+                  <a class="dropbtn">MORE</a>
+                  <div class="dropdown-content">
+                    <a href="SavePage01.html">SAVED CONTACTS</a>
+                    <a href="account.html">My ACCOUNT</a>
+                  </div>
+                </li>
+              </ul>
               <a href="index.html" class='link_login2 order_right'>LOG OUT</a> 
             </div>
           </nav> 
+
+          
 
           <div class='m_Hamburg icon-menu'></div>
         </header>
