修改下拉文字

--- a/on_CreatQRLink01_v2.html
+++ b/on_CreatQRLink01_v2.html
@@ -41,7 +41,7 @@
                 <li class="dropdown">
                   <a href="on_CreatQRLink01.html" class="dropbtn">SHARE MY INFO</a>
                   <div class="dropdown-content">
-                    <a href="on_CreatQRLink01.html">CREAT QR LINK</a>
+                    <a href="on_CreatQRLink01.html">CREATE QR LINK</a>
                     <a href="MyQRLink01.html">MY QR LINKS</a>
                   </div>
                 </li>
