--- a/account03.html
+++ b/account03.html
@@ -82,7 +82,7 @@
 
             <div class='cent_box cent_box65 borderGray_left'>
               <div class='input_box'>
-                <a href='account.html' class='btn_done'>Done</a>
+                <a href='account.html' class='btn_done'>DONE</a>
                 <!-- <button class='btn_done'>Done</button> -->
               </div>
 
@@ -153,7 +153,7 @@
     <!-- 光箱・增加社群內容 -->
     <div id="myModal" class="modal">
       <div class='modal_boxs'>
-        <span class="lightbox_done" onclick="closeModal()">Done</span>
+        <span class="lightbox_done" onclick="closeModal()">DONE</span>
         <p class='team_title order_left text_left'>ADD ANOTHER PLATFORM</p>
         <p class='team_type t_ds order_left text_left'>Select the platform(s) you would like to add</p>
         <!-- <span class="close icon-x" onclick="closeModal()"></span> -->
@@ -162,7 +162,7 @@
           <!-- 10/09 調整icon順序 ＋ 新增p -->
           <div class='check_social'>
             <input class='icon-email' type="checkbox" name="">
-            <p class='team_type padTD10'>E-mail</p>
+            <p class='team_type padTD10'> Email</p>
           </div>
           <div class='check_social'>
             <input class='icon-discord' type="checkbox" name="">
@@ -189,8 +189,16 @@
             <p class='team_type padTD10'>Line</p>
           </div>
           <div class='check_social'>
+            <input class='icon-www' type="checkbox" name="">
+            <p class='team_type padTD10'>Other</p>
+          </div>
+          <div class='check_social'>
             <input class='icon-phone' type="checkbox" name="">
             <p class='team_type padTD10'>Phone</p>
+          </div>
+          <div class='check_social'>
+            <input class='icon-paypal' type="checkbox" name="">
+            <p class='team_type padTD10'>PayPal</p>
           </div>
           <div class='check_social'>
             <input class='icon-reddit' type="checkbox" name="">
@@ -213,7 +221,7 @@
             <p class='team_type padTD10'>Twitter</p>
           </div>
           <div class='check_social'>
-            <input class='icon-TikTok' type="checkbox" name="">
+            <input class='icon-tiktok' type="checkbox" name="">
             <p class='team_type padTD10'>TikTok</p>
           </div>
           <div class='check_social'>
@@ -222,16 +230,13 @@
           </div>
           <div class='check_social'>
             <input class='icon-whatsapp' type="checkbox" name="">
-            <p class='team_type padTD10'>Whatsapp</p>
+            <p class='team_type padTD10'>WhatsApp</p>
           </div>   
           <div class='check_social'>
             <input class='icon-youtube' type="checkbox" name="">
-            <p class='team_type padTD10'>Youtube</p>
+            <p class='team_type padTD10'>YouTube</p>
           </div>
-          <div class='check_social'>
-            <input class='icon-www' type="checkbox" name="">
-            <p class='team_type padTD10'>www</p>
-          </div>
+          
         </div>
       </div>
     </div>
