--- a/index_login.html
+++ b/index_login.html
@@ -33,8 +33,9 @@
 
             <!-- 10/05 新增區域-->
             <div class='log_box order_right'>
-              <span>
-                MORE
+              <a href='account.html' class='log_a type_uppercase'>My Account</a>
+              <!-- <span>
+                My Account
                 <div>
                   <a href='NetWorkList01.html' class='log_a type_uppercase'>My Networks</a>
                   <a href='CreateNetwork01.html' class='log_a type_uppercase'>Create Network</a>
@@ -42,7 +43,7 @@
                   <a href='MyQRLink01.html' class='log_a type_uppercase'>My QR Links</a>
                   <a href='account.html' class='log_a type_uppercase'>My Account</a>
                 </div>
-              </span>
+              </span> -->
 
               <a href="login.html" class='link_login order_right'>LOG OUT</a>
             </div>
@@ -57,9 +58,9 @@
           </div>
 
           <div class='ir_boxs magTop45'>
-            <a href="NetWorkPage01.html" class='link_blueLine have_mark magRight10'>JOIN NEW NETWORK</a>
-            <!-- 10/05 拿掉樣式 in_btn_r -->
-            <a href="CreatQRLink01.html" class='link_brightBlue2 have_mark m_magTop15'>CREATE CUSTOM QR LINK</a>
+            <a href="CreatQRLink01.html" class='ds link_brightBlue2 l02 m_magTop15'>NETWORKS</a>
+            <a href="CreatQRLink01.html" class='ds link_brightBlue2 l02 m_magTop15'>SHARE MY INFO</a>
+            <a href="CreatQRLink01.html" class='ds link_brightBlue2 l02 m_magTop15'>SAVED CONTACTS</a>
           </div>
         </div>
       </div>
