--- a/on_CreatQRLink01_v2.html
+++ b/on_CreatQRLink01_v2.html
@@ -32,7 +32,7 @@
               <ul>
                 <li class="dropdown">
                   <a href="NetWorkList01.html" class="dropbtn">NETWORKS</a>
-                  <div class="dropdown-content">
+                  <div class="dropdown-content w1">
                     <a href="NetWorkList01.html">MY NETWORKS</a>
                     <a href="on_CreatQRLink01.html">CREATE NETWORK</a>
                     <a href="on_NetWorkPage01.html">JOIN NETWORK</a>
@@ -40,14 +40,14 @@
                 </li>
                 <li class="dropdown">
                   <a href="on_CreatQRLink01.html" class="dropbtn">SHARE MY INFO</a>
-                  <div class="dropdown-content">
+                  <div class="dropdown-content w2">
                     <a href="on_CreatQRLink01.html">CREATE QR LINK</a>
                     <a href="MyQRLink01.html">MY QR LINKS</a>
                   </div>
                 </li>
                 <li class="dropdown">
                   <a class="dropbtn">MORE</a>
-                  <div class="dropdown-content">
+                  <div class="dropdown-content w3">
                     <a href="SavePage01.html">SAVED CONTACTS</a>
                     <a href="account.html">My ACCOUNT</a>
                   </div>
